--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -13,16 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-machine:
-  java:
-    version: openjdk8
-
-test:
-  override:
-    - "true"
-
-deployment:
-  quayio:
-    branch: /.*/
-    commands:
-      - ./gradlew -PmavenUrl=$MAVEN_URL -PskipSigning=true -PmavenUsername=$MAVEN_USER -PmavenPassword=$MAVEN_PASSWORD uploadArchivesAll
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.5-bin.zip
